# GAOT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/compressible/airfoil/airfoil_li/: airfoil_li.json  multiscale.json  sample_edge.json  small_ps.json
config/compressible/airfoil/naca0012/: multiscale.json  naca0012.json  sample_edge.json  small_ps.json  small_ps_deep.json  small_ps_deep_.json  sps_se_multi.json  sps_se_multi_attndrop.json
config/compressible/airfoil/naca2412/: small_ps.json  small_ps_deep.json  small_ps_deep_.json  sps_se_multi.json
config/compressible/airfoil/rae2822/: small_ps.json  small_ps_deep.json  small_ps_deep_.json  sps_se_multi.json
config/compressible/bluff/: small_ps.json  small_ps_deep.json  small_ps_deep_.json  sps_se_multi.json
config/compressible/bluff/sta/: seed0.json  seed1.json  seed2.json  seed3.json
config/compressible/goat8/airfoil/: naca0012.json  naca2412.json  rae2822.json
config/dynamic/: ns_gauss.json
config/examples/time_dep/: ns_gauss.json  ns_gauss.nc
config/examples/time_indep/: naca0012.json  poisson_gauss.json
config/static/: poisson_gauss.json
demo/ce_data/: viz_red.ipynb
src/data/: dataset.py
src/model/: __init__.py  goat2d_fx.py  goat2d_vx.py
src/model/layers/: attn.py  geoembed.py  intergral_transform.py  magno2d_fx.py  magno2d_vx.py  mlp.py
src/trainer/: base.py  optimizers.py  seq.py  stat.py
src/trainer/utils/: cal_metric.py  data_pairs.py  default_set.py  io_norm.py  plot.py  train_setup.py
src/utils/: dataclass.py  rand.py  sample.py  scale.py
(+58 files in other folders)
