[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "goat2d"
version = "0.1.0"
description = "GOAT-2D: Geospatial Oriented Attention Transformer – core library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "GOAT Contributors" }
]
license = { text = "MIT" }
keywords = ["deep-learning", "transformer", "geospatial", "goat"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "torch",
    "pandas",
    "toml",
    "omegaconf",
    "xarray",
    "matplotlib",
    "tqdm",
    "seaborn",
    "scikit-learn",
    "torch-scatter",
    "rotary-embedding-torch"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true